--- a/src/main/webapp/CSS/General.css
+++ b/src/main/webapp/CSS/General.css
@@ -1,5 +1,10 @@
+h1{
+    /*font-size: 50px;*/
+    
+}
 h2{
-    /*font*/
+    /*font-size: 50px;*/
+    background: lightblue;
 }
 div{
     /*font-size:*/
