--- a/src/main/webapp/CSS/General.css
+++ b/src/main/webapp/CSS/General.css
@@ -2,18 +2,22 @@
     box-sizing: border-box;
 }
 h1{
-    /*font-size: 50px;*/
-    
+    font-family: fantasy; ;
+    font-size: 20px;
+    background: lightblue;
 }
 h2{
-    /*font-size: 50px;*/
+    font-family: sans-serif ;
+    font-size: 20px;
     background: lightblue;
 }
 div{
     /*font-size:*/
-    background-color: darkgrey;
+    background-color: lightcyan;
     display:inline-block;
-    padding-right:  20px;
-    border: greenyellow dotted 5px;
-    margin-right: 15px;
+    padding:10px;
+    border: greenyellow dotted 2px;
+    margin-right: 20px;
+    margin-top: 20px;
+    padding-top: 0px;
 }
